# microjson

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: test.yml
benches/: criterion_bench.rs
resources/test/: list_of_squares.json  massive_random.json
src/: error.rs  lib.rs  number_parsing.rs
tests/: large_input.rs
